--- a/src/style-menu.css
+++ b/src/style-menu.css
@@ -3,10 +3,22 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 70px;
+}
+
+h2 {
+  font-size: 65px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
 h1,
 h2,
 .menu-categorie {
-  margin-left: 30px;
+  margin-left: 50px;
   padding-top: 5px;
 }
 
@@ -26,16 +38,16 @@ a:visited {
 .title {
   background-color: #403a7d;
   color: #fff;
-  width: 250px;
-  height: 50px;
-  border-radius: 0 30px 30px 0;
+  width: 70%;
+  height: 100px;
+  border-radius: 0 60px 60px 0;
 }
 
 .filter-button,
 .categorie-btn {
   background-color: #ebebeb;
-  width: 200px;
-  height: 40px;
+  width: 60%;
+  height: 100px;
   text-align: center;
   border-radius: 10px;
   margin-left: 30px;
@@ -43,17 +55,17 @@ a:visited {
 
 .button-back {
   background-color: #ebebeb;
-  width: 200px;
-  height: 40px;
-  border-radius: 0 30px 30px 0;
+  width: 50%;
+  height: 100px;
+  border-radius: 0 60px 60px 0;
 }
 
 .sub-categorie {
   background-color: #8282cf;
   color: #fff;
-  width: 220px;
-  height: 40px;
-  border-radius: 0 30px 30px 0;
+  width: 60%;
+  height: 100px;
+  border-radius: 0 60px 60px 0;
 }
 
 .margin-extra {
@@ -65,7 +77,14 @@ a:visited {
 }
 
 .margin-categorie {
-  margin-top: -1px;
+  margin-top: 8px;
+  font-size: 50px;
+}
+
+.filter-text {
+  text-align: center;
+  font-size: 50px;
+  padding-top: 15px;
 }
 
 .sound-btn {
@@ -78,5 +97,11 @@ a:visited {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 30px;
+  margin: auto;
+  margin-top: 50px;
+  font-size: 50px;
+}
+
+.link-to-filter {
+  margin-top: -55px;
 }
